oldFlux-system/k8s/apps/contact.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contact
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-service
  namespace: contact
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contact-service
  template:
    metadata:
      labels:
        app: contact-service
    spec:
      imagePullSecrets:
      - name: contact-service-secrets
      containers:
      - name: contact-service
        image: ghcr.io/szeigo/contact-service:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8066
          name: http
        volumeMounts:
        - name: logs
          mountPath: /app/logs
      volumes:
      - name: logs
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: contact-service
  namespace: contact
spec:
  type: ClusterIP
  selector:
    app: contact-service
  ports:
  - name: http
    port: 8066
    targetPort: 8066
---
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: contact-gateway
  namespace: contact
spec:
  gatewayClassName: envoy
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: kontakt.norsemen.io
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: letsencrypt-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: contact-route
  namespace: contact
spec:
  hostnames:
  - kontakt.norsemen.io
  parentRefs:
  - name: contact-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: contact-service
      port: 8066
